# DiligentFX

./: .travis.yml  BuildUtils.cmake  CMakeLists.txt  README.md  appveyor.yml
FrameGraph/: CMakeLists.txt
FrameGraph/include/: FrameGraphImpl.hpp
FrameGraph/interface/: FrameGraph.h  FrameGraphBase.hpp
FrameGraph/src/: FrameGraphImpl.cpp
Hydrogent/: CMakeLists.txt  readme.md
Hydrogent/include/: HnDrawItem.hpp  HnGeometryPool.hpp  HnMaterial.hpp  HnMaterialNetwork.hpp  HnMesh.hpp  HnMeshUtils.hpp  HnRenderBuffer.hpp  HnRenderDelegate.hpp  HnRenderParam.hpp  HnRenderPass.hpp  HnRenderPassState.hpp  HnRenderer.hpp  HnRendererImpl.hpp  HnShaderSourceFactory.hpp  HnShadowMapManager.hpp  HnTextureIdentifier.hpp  HnTextureRegistry.hpp  HnTextureUtils.hpp  HnTokens.hpp  HnTypeConversions.hpp  RenderDelegate.hpp  Renderer.hpp
Hydrogent/include/Computations/: HnExtComputationImpl.hpp  HnSkinningComputation.hpp
Hydrogent/include/Tasks/: HnPostProcessTask.hpp  HnReadRprimIdTask.hpp  HnRenderEnvMapTask.hpp  HnRenderRprimsTask.hpp  HnRenderTask.hpp  HnSetupRenderingTask.hpp  HnTask.hpp  HnTaskController.hpp
Hydrogent/interface/: GfTypeConversions.hpp  HnBuffer.hpp  HnCamera.hpp  HnExtComputation.hpp  HnFrameRenderTargets.hpp  HnGeometryPool.hpp  HnLight.hpp  HnMaterial.hpp  HnMaterialNetwork.hpp  HnMesh.hpp  HnRenderDelegate.hpp  HnRenderPass.hpp  HnRenderPassState.hpp  HnRenderer.hpp  HnTextureRegistry.hpp  HnTokens.hpp  HnTypes.hpp
Hydrogent/interface/Tasks/: HnBeginFrameTask.hpp  HnBeginMainPassTask.hpp  HnBeginOITPassTask.hpp  HnBuildTransmittanceTask.hpp  HnComputeDepthBoundsTask.hpp  HnCopySelectionDepthTask.hpp  HnEndOITPassTask.hpp  HnPostProcessTask.hpp  HnProcessSelectionTask.hpp  HnReadRprimIdTask.hpp  HnRenderAxesTask.hpp  HnRenderBoundBoxTask.hpp  HnRenderEnvMapTask.hpp  HnRenderRprimsTask.hpp  HnRenderShadowsTask.hpp  HnSetupRenderingTask.hpp  HnSetupSelectionDepthTask.hpp  HnTask.hpp  HnTaskManager.hpp
Hydrogent/shaders/: HnAxes.psh  HnAxes.vsh  HnAxesStructures.fxh  HnClosestSelectedLocation.fxh  HnCopyFrame.psh  HnInitClosestSelectedLocation.psh  HnPostProcess.psh  HnPostProcess.vsh  HnPostProcessStructures.fxh  HnUpdateClosestSelectedLocation.psh  PostProcess.psh
Hydrogent/shaders_inc/: HnAxes.psh.h  HnAxes.vsh.h  HnAxesStructures.fxh.h  HnClosestSelectedLocation.fxh.h  HnInitClosestSelectedLocation.psh.h  HnPostProcess.psh.h  HnPostProcess.vsh.h  HnPostProcessStructures.fxh.h  HnUpdateClosestSelectedLocation.psh.h  PostProcess.psh.h  shaders_list.h
Hydrogent/src/: HnBuffer.cpp  HnCamera.cpp  HnDrawItem.cpp  HnExtComputation.cpp  HnFrameRenderTargets.cpp  HnGeometryPool.cpp  HnLight.cpp  HnMaterial.cpp  HnMaterialNetwork.cpp  HnMesh.cpp  HnMeshUtils.cpp  HnRenderBuffer.cpp  HnRenderDelegate.cpp  HnRenderParam.cpp  HnRenderPass.cpp  HnRenderPassState.cpp  HnRenderer.cpp  HnRendererImpl.cpp  HnShaderSourceFactory.cpp  HnShadowMapManager.cpp  HnTextureRegistry.cpp  HnTextureUtils.cpp  HnTokens.cpp  HnTypeConversions.cpp  Material.cpp  Mesh.cpp  RenderDelegate.cpp  Renderer.cpp
Hydrogent/src/Computations/: HnExtComputationImpl.cpp  HnSkinningComputation.cpp
Hydrogent/src/Tasks/: HnBeginFrameTask.cpp  HnBeginMainPassTask.cpp  HnBeginOITPassTask.cpp  HnBuildTransmittanceTask.cpp  HnComputeDepthBoundsTask.cpp  HnCopySelectionDepthTask.cpp  HnEndOITPassTask.cpp  HnPostProcessTask.cpp  HnProcessSelectionTask.cpp  HnReadRprimIdTask.cpp  HnRenderAxesTask.cpp  HnRenderBoundBoxTask.cpp  HnRenderEnvMapTask.cpp  HnRenderRprimsTask.cpp  HnRenderShadowsTask.cpp  HnRenderTask.cpp  HnSetupRenderingTask.cpp  HnSetupSelectionDepthTask.cpp  HnTask.cpp  HnTaskController.cpp  HnTaskManager.cpp
Radient/: CMakeLists.txt  readme.md
Radient/docs/: CameraConventions.md  LightConventions.md  README.md
Radient/include/: RadientAssetManagerImpl.hpp  RadientBackendImpl.hpp  RadientDrawList.hpp  RadientEngineImpl.hpp  RadientFrameRenderTargets.hpp  RadientGLTFConverter.hpp  RadientGeometryPass.hpp  RadientLightList.hpp  RadientMaterialBindingsStorage.hpp  RadientMath.hpp  RadientMeshComponentStorage.hpp  RadientPostProcessPipeline.hpp  RadientRenderPipeline.hpp  RadientRenderResourceCache.hpp  RadientRendererImpl.hpp  RadientSceneDrawableCache.hpp  RadientSceneImpl.hpp  RadientSceneImporterImpl.hpp  RadientSceneRenderCache.hpp  RadientSceneRenderDataCache.hpp  RadientSceneState.hpp  RadientSceneWriterImpl.hpp  RadientSkyboxPass.hpp  RadientViewImpl.hpp
Radient/include/Assets/: RadientAssetCache.hpp  RadientAssetImpl.hpp  RadientAssetManagerImpl.hpp  RadientAssetResolver.hpp  RadientAssetStatus.hpp  RadientAssetURI.hpp  RadientAssetValidation.hpp  RadientCacheKeyBuilder.hpp  RadientDrawableMeshConverter.hpp  RadientFilesystemAssetResolver.hpp  RadientGLTFLoader.hpp  RadientMaterialAssetManager.hpp  RadientMeshAssetManager.hpp  RadientMeshIndexSource.hpp  RadientMeshSource.hpp  RadientMeshVertexSource.hpp  RadientMeshViewSource.hpp  RadientTextureAssetManager.hpp  RadientTextureFormat.hpp  RadientTextureSource.hpp
Radient/include/Core/: RadientEngineImpl.hpp
Radient/include/Math/: RadientMath.hpp
Radient/interface/: Radient.h  RadientAssetResolver.h  RadientAssets.h  RadientBackend.h  RadientEngine.h  RadientMath.h  RadientMeshPrimitives.h  RadientRenderer.h  RadientScene.h  RadientSceneImporter.h  RadientSceneWriter.h  RadientTypes.h  RadientView.h
Radient/src/: RadientAssetManagerImpl.cpp  RadientBackendImpl.cpp  RadientDrawList.cpp  RadientEngineImpl.cpp  RadientFrameRenderTargets.cpp  RadientGLTFConverter.cpp  RadientGeometryPass.cpp  RadientLightList.cpp  RadientMaterialBindingsStorage.cpp  RadientMath.cpp  RadientMeshComponentStorage.cpp  RadientPostProcessPipeline.cpp  RadientRenderPipeline.cpp  RadientRenderResourceCache.cpp  RadientRendererImpl.cpp  RadientSceneDrawableCache.cpp  RadientSceneImpl.cpp  RadientSceneImporterImpl.cpp  RadientSceneRenderCache.cpp  RadientSceneRenderDataCache.cpp  RadientSceneState.cpp  RadientSceneWriterImpl.cpp  RadientSkyboxPass.cpp  RadientViewImpl.cpp
Tests/RadientGPUTest/: CMakeLists.txt
Tests/RadientTest/: CMakeLists.txt
(+462 files in other folders)
